# saymytext

./: readme.md  setup.cfg  setup.py
src/saymytext/: __init__.py
