[metadata]
name = saymytext
version = 0.7
author = Denys
author_email = skvortsovdenis81@gmail.com
description = A text to speech package
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/skvortsovden/saymytext
project_urls =
    Bug Tracker = https://github.com/skvortsovden/saymytext/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
  gTTS==2.2.3
  PyAudio==0.2.11
  pydub==0.25.1

[options.packages.find]
where = src